--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # ========================================
-# JS-Monolith Project .gitignore
+# js-monolith Project .gitignore
 # ========================================
 
 # ========================================
