--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@js-monolith/eslint-config",
   "version": "1.0.0",
-  "description": "Shared ESLint configuration for JS-Monolith",
+  "description": "Shared ESLint configuration for js-monolith",
   "author": "dunamismax <dunamismax@tutamail.com>",
   "main": "index.js",
   "dependencies": {
